--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <header>
     <h1>Reliable, efficient delivery</h1>
     <h1 class="h1-bold">Powered by Technology</h1>
-    <h3>Our Artificial Intelligence powered tools use millions of project data points 
-    to ensure that your project is successful</h3>
+    <p>Our Artificial Intelligence powered tools use millions of project data points 
+    to ensure that your project is successful</p>
   </header>
   <section class="section-one">
     <h2>Supervisor</h2>
