--- a/index.html
+++ b/index.html
@@ -12,29 +12,31 @@
   <header>
     <h1>Reliable, efficient delivery</h1>
     <h1 class="h1-bold">Powered by Technology</h1>
-    <p>Our Artificial Intelligence powered tools use millions of project data points 
+    <p class="p1-header">Our Artificial Intelligence powered tools use millions of project data points 
     to ensure that your project is successful</p>
   </header>
-  <section class="section-one">
-    <h2>Supervisor</h2>
-    <p>Monitors activity to identify project roadblocks</p>
-    <img src="images/icon-supervisor.svg">
-  </section>
-  <section class="section-two">
-    <h2>Team Builder</h2>
-    <p>Scans our talent network to create the optimal team for your project</p>
-    <img src="images/icon-team-builder.svg">
-  </section>
-  <section class="section-three">
-    <h2>Karma</h2>
-    <p>Regularly evaluates our talent to ensure quality</p>
-    <img src="images/icon-karma.svg">
-  </section>
-    <section class="section-four">
-    <h2>Calculator</h2>
-    <p>Uses data from past projects to provide better delivery estimates</p>
-    <img src="images/icon-calculator.svg">
-  </section>
+  <main>
+    <section class="section-one">
+      <h2>Supervisor</h2>
+      <p>Monitors activity to identify project roadblocks</p>
+      <img src="images/icon-supervisor.svg">
+    </section>
+    <section class="section-two">
+      <h2>Team Builder</h2>
+      <p>Scans our talent network to create the optimal team for your project</p>
+      <img src="images/icon-team-builder.svg">
+    </section>
+    <section class="section-three">
+      <h2>Karma</h2>
+      <p>Regularly evaluates our talent to ensure quality</p>
+      <img src="images/icon-karma.svg">
+    </section>
+      <section class="section-four">
+      <h2>Calculator</h2>
+      <p>Uses data from past projects to provide better delivery estimates</p>
+      <img src="images/icon-calculator.svg">
+    </section>
+  </main>
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
