--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <!-- file:///Users/allison.mazzetti/Documents/four-card-feature-section-master/index.html -->
   <title>Frontend Mentor | Four card feature section</title>
 </head>
 <body>
@@ -19,22 +18,22 @@
     <section class="section-one">
       <h2>Supervisor</h2>
       <p>Monitors activity to identify project roadblocks</p>
-      <img src="images/icon-supervisor.svg">
+      <img src="images/icon-supervisor.svg" alt="Supervisor">
     </section>
     <section class="section-two">
       <h2>Team Builder</h2>
       <p>Scans our talent network to create the optimal team for your project</p>
-      <img src="images/icon-team-builder.svg">
+      <img src="images/icon-team-builder.svg" alt="Team Builder">
     </section>
     <section class="section-three">
       <h2>Karma</h2>
       <p>Regularly evaluates our talent to ensure quality</p>
-      <img src="images/icon-karma.svg">
+      <img src="images/icon-karma.svg" alt="Karma">
     </section>
       <section class="section-four">
       <h2>Calculator</h2>
       <p>Uses data from past projects to provide better delivery estimates</p>
-      <img src="images/icon-calculator.svg">
+      <img src="images/icon-calculator.svg" alt="Calculator">
     </section>
   </main>
   <footer>
